5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1670_2970.log
== SUBMITION (2019-04-16 19:13:40) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf=1.042.000
qo=1.500
i=("qf/qo**(1/t)"-1)
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(i,5)
-- EXECUTION TIME:
0.180761
-- ERROR:
  File "/home/codebench/codes/1670/2970/main.py", line 3
    qf=1.042.000
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:13:48) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf=1.042.000
qo=1.500
i=("qf/qo**(1/t)"-1)
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(i,5)
-- ERROR:
File "XXXX", line 3
    qf=1.042.000
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:14:47) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1 minhao e 42 mil
qo=1.500
i=("qf/qo**(1/t)"-1)
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(i,5)
-- EXECUTION TIME:
0.187265
-- ERROR:
  File "/home/codebench/codes/1670/2970/main.py", line 3
    qf= 1 minhao e 42 mil
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:14:49) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1 minhao e 42 mil
qo=1.500
i=("qf/qo**(1/t)"-1)
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(i,5)
-- ERROR:
File "XXXX", line 3
    qf= 1 minhao e 42 mil
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:15:25) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1.042.000,00
qo=1.500
i=("qf/qo**(1/t)"-1)
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(i,5)
-- ERROR:
File "XXXX", line 3
    qf= 1.042.000,00
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:04) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=("qf/qo**(1/t)"-1)
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(i,5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    i=("qf/qo**(1/t)"-1)
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:17:47) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=(qf/qo**(1/t)-1)
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(i,5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    i=(qf/qo**(1/t)-1)
TypeError: unsupported operand type(s) for /: 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:15) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=(qf/qo**(1/t)-1)
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- EXECUTION TIME:
0.156766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2970/main.py", line 5, in <module>
    i=(qf/qo**(1/t)-1)
TypeError: unsupported operand type(s) for /: 'tuple' and 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:19) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=(qf/qo**(1/t)-1)
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    i=(qf/qo**(1/t)-1)
TypeError: unsupported operand type(s) for /: 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:45) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=("qf/qo**(1/t)-1")
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- EXECUTION TIME:
0.304565
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2970/main.py", line 6, in <module>
    if (i<=0.01):
TypeError: unorderable types: str() <= float()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:46) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=("qf/qo**(1/t)-1")
if (i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (i<=0.01):
TypeError: '<=' not supported between instances of 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:19:19) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=("qf/qo**(1/t)-1")
if (i>=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- EXECUTION TIME:
0.214207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2970/main.py", line 6, in <module>
    if (i>=0.01):
TypeError: unorderable types: str() >= float()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:19:21) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=("qf/qo**(1/t)-1")
if (i>=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (i>=0.01):
TypeError: '>=' not supported between instances of 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:20:05) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=("qf/qo**(1/t)-1")
if ( i < = 0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- ERROR:
File "XXXX", line 6
    if ( i < = 0.01):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:21:15) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=("qf/qo**(1/t)-1")
if ( i < = 0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- ERROR:
File "XXXX", line 6
    if ( i < = 0.01):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:21:24) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i=("qf/qo**(1/t)-1")
if ( i <= 0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if ( i <= 0.01):
TypeError: '<=' not supported between instances of 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:22:09) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000,00
qo=1.500
i= qf/qo**(1/t)-1
if ( i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    i= qf/qo**(1/t)-1
TypeError: unsupported operand type(s) for /: 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:23:34) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000
qo=1500
i= qf/qo**(1/t)-1
if ( i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- OUTPUT:
Irreal
1030482.00234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:23:40) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000
qo=1500
i= qf/qo**(1/t)-1
if ( i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- EXECUTION TIME:
0.160808
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
Irreal
1030482.00234
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
Irreal
1028598.52281
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
Irreal
1010726.32123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:23:43) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000
qo=1500
i= qf/qo**(1/t)-1
if ( i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- OUTPUT:
Irreal
1030482.00234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:25:06) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000
qo=1500
i= ((qf/qo)**(1/t))-1
if ( i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- OUTPUT:
Real
0.00999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:25:12) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000
qo=1500
i= ((qf/qo)**(1/t))-1
if ( i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- EXECUTION TIME:
0.182085
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
Real
0.00999
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
Irreal
0.01165
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
Irreal
0.02764
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:25:16) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000
qo=1500
i= ((qf/qo)**(1/t))-1
if ( i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(mensagem)
print(round(i,5))
-- OUTPUT:
Real
0.00999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:38) 
-- CODE:
t=float(input("digite o numero"))
from math import*
qf= 1042000
qo=1500
i= ((qf/qo)**(1/t))-1
if ( i<=0.01):
	mensagem= "Real"
else:
	mensagem= "Irreal"
print(round(i,5))
print(mensagem)
-- EXECUTION TIME:
0.202287
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
Irreal
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
